[package]
name = "postkit"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Shared library for DCP Wizard, IMF Wizard, and DCP Doctor"

[dependencies]
base64 = "0.22"
dirs = "6"
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "process", "io-util", "fs"], optional = true }
tracing = "0.1"

[features]
default = []
async = ["dep:tokio"]

[dev-dependencies]
tempfile = "3"
